--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body {
 /* Logo */
 .logo {
   font-size: 28px;
+  margin-left: 15px;
   font-weight: bold;
   color: #000000;
   text-decoration: none;
