--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ body {
 
 .nav-link.active {
   color: #000000;
-  background-color: #95ac00;
+  background-color: #d6e861;
   font-weight: 600;
 }
 
