--- a/src/Get-started.css
+++ b/src/Get-started.css
@@ -8,7 +8,7 @@
             min-height: 100vh;
             padding: 1rem;
             font-family: Georgia, serif;
-            background-color: #f9f9f9;
+            background-color: rgb(244, 231, 167);
           }
 
           /* Main Content Styling */
